komposefiles/db-clean-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-kube.yaml -o komposefiles/ --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db-clean
  name: db-clean
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-clean
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-kube.yaml -o komposefiles/ --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/jav_mlops_proyecto3_backend: "true"
        io.kompose.service: db-clean
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
            - name: MYSQL_PASSWORD
            - name: MYSQL_ROOT_PASSWORD
            - name: MYSQL_USER
          image: mysql/mysql-server:5.7.28
          name: clean-data-db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-clean-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/gacelydev/Documentos/MINTA/MLOps/Proyecto3/JAV_MLOps_Proyecto3/db_clean_data
          name: db-clean-hostpath0
status: {}
